--- a/src/app/components/evaluacion-profesor/evaluacion-profesor.component.html
+++ b/src/app/components/evaluacion-profesor/evaluacion-profesor.component.html
@@ -11,7 +11,7 @@
         <a class="nav-link" href="">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Ayuda</a>
+        <a class="nav-link" routerLink="/evaluacion">Ayuda</a>
       </li>
     </ul>
     <form class="form-inline mt-2 mt-md-0">
@@ -19,8 +19,8 @@
         <li class="nav-item"><a class="nav-link">Profesor<span class="sr-only">(current)</span></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Fabian Lasso</a>
+            aria-haspopup="true" aria-expanded="false" *ngFor="let prof of profesores">
+            {{prof.nombre}}</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="">Perfil</a>
             <a class="dropdown-item" href="">Cursos</a>
@@ -54,13 +54,12 @@
 <div class="container">
   <h1 class="display-4">Psiquiatría de Enlace</h1><br />
   <div class="row">
-    <div class="col-sm-4 col-xs-12">
+    <div class="col-sm-4 col-xs-12" *ngFor="let est of estudiantes"> 
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/img/estudiante1.jpg" alt="Card image cap">
+        <img class="card-img-top" src="assets/img/{{est.codigo}}.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Nombre Estudiante</h5>
-            <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>
-            <p class="card-text"><strong>En rotación: </strong> Si/No</p>
+            <h5 class="card-title">{{est.nombre}}</h5>
+            <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>  
           <button type="button" class="btn btn-primary ajustar" data-toggle="modal" data-target="#exampleModalCenter">
             Evaluar
           </button>
@@ -71,88 +70,45 @@
             <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle">Evaluar a Nombre del Estudiante</h5>
+                  <h5 class="modal-title" id="exampleModalCenterTitle">Evaluación</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
-                <div class="modal-body">
-                    <select class="form-control">
-                        <option>Objetivos de Aprendizaje</option>
-                        <option>Objetivo1</option>
-                        <option>Objetivo2</option>
-                        <option>Objetivo3</option>
-                      </select>
-
-                      <br/>
-
-                      <div class="row">
-                        <div class="col-sm-4">
-                            <select class="form-control">
-                                <option>Objetivos del Saber</option>
-                                <option>Objetivo1</option>
-                                <option>Objetivo2</option>
-                                <option>Objetivo3</option>
-                              </select>
-                              <br/>
-
-                              <select class="form-control">
-                                  <option>Método de Assessment</option>
-                                  <option>Método1</option>
-                                  <option>Método2</option>
-                                  <option>Método3</option>
-                                </select>
-                                <br/>
-
-                                <label for="customRange2">Example range</label>
-                            <input type="range" class="custom-range" min="0" max="5" id="customRange2">
-                        </div>
-                        <div class="col-sm-4">
-                            <select class="form-control">
-                                <option>Objetivos del Hacer</option>
-                                <option>Objetivo1</option>
-                                <option>Objetivo2</option>
-                                <option>Objetivo3</option>
-                              </select>
-                              <br/>
-
-                              <select class="form-control">
-                                  <option>Método de Assessment</option>
-                                  <option>Método1</option>
-                                  <option>Método2</option>
-                                  <option>Método3</option>
-                                </select>
-                              <br/>
-
-                              <label for="customRange3">Example range</label>
-                              <input type="range" class="custom-range" min="0" max="5" id="customRange3">
-
-                        </div>
-                        <div class="col-sm-4">
-                            <select class="form-control">
-                                <option>Objetivos del Ser</option>
-                                <option>Objetivo1</option>
-                                <option>Objetivo2</option>
-                                <option>Objetivo3</option>
-                              </select>
-                              <br/>
-
-                              <select class="form-control">
-                                  <option>Método de Assessment</option>
-                                  <option>Método1</option>
-                                  <option>Método2</option>
-                                  <option>Método3</option>
-                                </select>
-                                <br/>
-                                <label for="customRange4">Example range</label>
-                                <input type="range" class="custom-range" min="0" max="5" id="customRange4">
-                        </div>
-                  
+                <div class="modal-body" >
+                    <div class="row">
+                      
+                      <div class="col-sm-4" style="padding-bottom: 7%">
+                        <button type="button" class="btn btn-outline-primary btnCompetencia" routerLink="/evaluacion" data-dismiss="modal">Competencia 1</button>
                       </div>
+                
+                      <div class="col-sm-4" style="padding-bottom: 7%">
+                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 2</button>
+                      </div>
+                     
+                      <div class="col-sm-4" style="padding-bottom: 7%">
+                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 3</button>
+                      </div>
+                      
+                      <div class="col-sm-4" style="padding-bottom: 7%">
+                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 4</button>
+                      </div>
+                     
+                      <div class="col-sm-4" style="padding-bottom: 7%">
+                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 5</button>
+                      </div>
+                      
+                      <div class="col-sm-4" style="padding-bottom: 7%">
+                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 6</button>
+                      </div>
+                     
+                      <div class="col-sm-4" style="padding-bottom: 7%">
+                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 7</button>
+                      </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Guardar cambios</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 </div>
               </div>
             </div>
@@ -160,181 +116,6 @@
         </div>
       </div>
       <br />
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/img/estudiante3.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Nombre Estudiante</h5>
-          <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>
-          <p class="card-text"><strong>En rotación: </strong> Si/No</p>
-          <button type="button" class="btn btn-primary ajustar" data-toggle="modal" data-target="#exampleModalCenter">
-            Evaluar
-          </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Guardar cambios</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/img/estudiante2.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Nombre Estudiante</h5>
-            <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>
-            <p class="card-text"><strong>En rotación: </strong> Si/No</p>
-          <button type="button" class="btn btn-primary ajustar" data-toggle="modal" data-target="#exampleModalCenter">
-            Evaluar
-          </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Guardar cambios</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/img/estudiante2.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Nombre Estudiante</h5>
-            <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>
-            <p class="card-text"><strong>En rotación: </strong> Si/No</p>
-          <button type="button" class="btn btn-primary ajustar" data-toggle="modal" data-target="#exampleModalCenter">
-            Evaluar
-          </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Guardar cambios</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/img/estudiante1.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Nombre Estudiante</h5>
-            <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>
-            <p class="card-text"><strong>En rotación: </strong> Si/No</p>
-          <button type="button" class="btn btn-primary ajustar" data-toggle="modal" data-target="#exampleModalCenter">
-            Evaluar
-          </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Guardar cambios</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/img/estudiante3.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Nombre Estudiante</h5>
-            <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>
-            <p class="card-text"><strong>En rotación: </strong> Si/No</p>
-          <button type="button" class="btn btn-primary ajustar" data-toggle="modal" data-target="#exampleModalCenter">
-            Evaluar
-          </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Guardar cambios</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
