--- a/src/app/components/evaluacion-profesor/evaluacion-profesor.component.html
+++ b/src/app/components/evaluacion-profesor/evaluacion-profesor.component.html
@@ -1,133 +1,14 @@
-<nav class="navbar navbar-expand-md navbar-dark bd-navbar mb-4">
-  <a class="navbar-brand" href=""><img src="assets/brand/cerebrito.png" width="30" height="30" class="d-inline-block align-top"
-      alt=""> Psycho</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/evaluacion">Ayuda</a>
-      </li>
-    </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link">Profesor<span class="sr-only">(current)</span></a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" *ngFor="let prof of profesores">
-            {{prof.nombre}}</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="">Perfil</a>
-            <a class="dropdown-item" href="">Cursos</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="">Cerrar Sesión</a>
-          </div>
-        </li>
-      </ul>
-      <img src="assets/img/foto.jpg" alt="Responsive image" class="rounded-circle" width="40" height="40">
-    </form>
-  </div>
-</nav>
 
-<div class="jumbotron jumbotron-fluid ajustarMargen">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-5">
-        <img src="assets/img/cerebrito.png" class="img-fluid float-right" alt="Responsive image" height="50%" width="50%">
-      </div>
-      <div class="col-sm-7">
-        <br />
-        <br />
-        <br />
-        <h1 class="display-4">Psycho</h1>
-        <p class="lead">Usted se encuentra en el modulo de evaluación de estudiantes.</p>
-      </div>
-    </div>
-  </div>
-</div>
+<app-jumbotron></app-jumbotron>
 
 <div class="container">
   <h1 class="display-4">Psiquiatría de Enlace</h1><br />
   <div class="row">
     <div class="col-sm-4 col-xs-12" *ngFor="let est of estudiantes"> 
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/img/{{est.codigo}}.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">{{est.nombre}}</h5>
-            <p class="card-text"><strong>Programa Acádemico: </strong>Especialización en Psiquiatría</p>  
-          <button type="button" class="btn btn-primary ajustar" data-toggle="modal" data-target="#exampleModalCenter">
-            Evaluar
-          </button>
-
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-            aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle">Evaluación</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body" >
-                    <div class="row">
-                      
-                      <div class="col-sm-4" style="padding-bottom: 7%">
-                        <button type="button" class="btn btn-outline-primary btnCompetencia" routerLink="/evaluacion" data-dismiss="modal">Competencia 1</button>
-                      </div>
-                
-                      <div class="col-sm-4" style="padding-bottom: 7%">
-                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 2</button>
-                      </div>
-                     
-                      <div class="col-sm-4" style="padding-bottom: 7%">
-                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 3</button>
-                      </div>
-                      
-                      <div class="col-sm-4" style="padding-bottom: 7%">
-                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 4</button>
-                      </div>
-                     
-                      <div class="col-sm-4" style="padding-bottom: 7%">
-                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 5</button>
-                      </div>
-                      
-                      <div class="col-sm-4" style="padding-bottom: 7%">
-                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 6</button>
-                      </div>
-                     
-                      <div class="col-sm-4" style="padding-bottom: 7%">
-                        <button type="button" class="btn btn-outline-primary btnCompetencia">Competencia 7</button>
-                      </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+          <app-card-estudiante [est]="est"></app-card-estudiante>
       <br />
     </div>
   </div>
 </div>
 
 <br/>
-
-<footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-          <img src="assets/brand/cerebrito.png"  width="50" height="50" class="" alt="Responsive image"> <span> Psycho. Copyright ©. 2018</span>
-      </div>
-      </div>
-    </div>     
-</footer>
