--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -1,3 +1,10 @@
+  
+  <h4>Evaluación de: {{estudiante?.nombre}} {{estudiante?.apellido}}</h4>
+  <h4>Curso: Psiquiatría de Enlace </h4>
+  <h4>Competencia: {{competencia?.desc_competencia}}</h4>
+
+<br/>
+
   <div class="container-fluid">
 
       <table class="table table-bordered">
@@ -133,5 +140,4 @@
                 </tr>
           </tbody>
         </table>
-
   </div>
