--- a/src/app/components/card-estudiante/card-estudiante.component.html
+++ b/src/app/components/card-estudiante/card-estudiante.component.html
@@ -19,31 +19,31 @@
         <div class="row">
           
           <div class="col-sm-4" style="padding-bottom: 7%">
-            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores(1)">Competencia 1</button>
+            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('1')">Competencia 1</button>
           </div>
     
           <div class="col-sm-4" style="padding-bottom: 7%">
-            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores(2)">Competencia 2</button>
+            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('2')">Competencia 2</button>
           </div>
          
           <div class="col-sm-4" style="padding-bottom: 7%">
-            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores(3)" >Competencia 3</button>
+            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('3')" >Competencia 3</button>
           </div>
           
           <div class="col-sm-4" style="padding-bottom: 7%">
-            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores(4)" >Competencia 4</button>
+            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('4')" >Competencia 4</button>
           </div>
          
           <div class="col-sm-4" style="padding-bottom: 7%">
-            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores(5)" >Competencia 5</button>
+            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('5')" >Competencia 5</button>
           </div>
           
           <div class="col-sm-4" style="padding-bottom: 7%">
-            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores(6)">Competencia 6</button>
+            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('6')">Competencia 6</button>
           </div>
          
           <div class="col-sm-4" style="padding-bottom: 7%">
-            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores(7)">Competencia 7</button>
+            <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('7')">Competencia 7</button>
           </div>
         </div>
     </div>
