--- a/src/app/components/card-estudiante/card-estudiante.component.css
+++ b/src/app/components/card-estudiante/card-estudiante.component.css
@@ -5,5 +5,12 @@
 
 .btnCompetencia{
     width: 100%;
-    height: 200%; 
+    height: 200%;
+    border-color: #7B1FA2;
+    color: #7B1FA2;
+}
+
+.btnCompetencia:hover{
+    background-color: #7B1FA2; 
+    color: white;
 }
