--- a/src/app/components/evaluacion/evaluacion.component.css
+++ b/src/app/components/evaluacion/evaluacion.component.css
@@ -1,15 +1,4 @@
-.bd-navbar {
+.badge-color {
     background-color: #7B1FA2;
     color: white;
-}
-
-.footer {
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    line-height: 100px;
-    background-color: #7B1FA2;
-    color: white;
-    position: relative;
 }
