--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -1,143 +1,106 @@
-  
-  <h4>Evaluación de: {{estudiante?.nombre}} {{estudiante?.apellido}}</h4>
-  <h4>Curso: Psiquiatría de Enlace </h4>
-  <h4>Competencia: {{competencia?.desc_competencia}}</h4>
+<div class="jumbotron jumbotron-fluid ajustarMargen">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5">
+          <img src="assets/img/{{estudiante.url_foto}}.jpg" class="img-fluid float-right rounded-circle" alt="Responsive image" height="50%" width="50%">
+        </div>
+        <div class="col-sm-7">
+          <h5 class="display-4">Evaluar a: {{estudiante?.nombre}} {{estudiante?.apellido}}</h5>
+          <h5 class="lead">Curso: Psiquiatría de Enlace </h5>
+          <h5 class="lead">Competencia: {{competencia?.desc_competencia}}</h5>
+        </div>
+      </div>
+    </div>
+  </div> 
 
 <br/>
 
   <div class="container-fluid">
 
-      <table class="table table-bordered">
-          <thead>
+      <div class="alert alert-danger" [hidden]="!error">
+          {{error}}
+     </div>
+
+    <div class="table-responsive">
+      <table class="table table-hover">
+          <thead class="thead-dark">
             <tr align="center" valign="">
-              <th scope="col" >Objetivos</th>
-              <th scope="col">Criterios</th>
-              <th scope="col">Método de Assessment</th>
-              <th scope="col">1</th>
-              <th scope="col">2</th>
-              <th scope="col">3</th>
-              <th scope="col">4</th>
-              <th scope="col">5</th>
-              <th scope="col">6</th>
-              <th scope="col">7</th>
-              <th scope="col">8</th>
-              <th scope="col">9</th>
+              <th >Objetivos</th>
+              <th >Criterios</th>
+              <th >Método de Assessment</th>
+              <th colspan="9" >Calificación</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row" rowspan="3" style="text-align:center; vertical-align: middle;">Saber</th>
-              <td>Principales GSACUYGASIUCGBA HASBCIJGBACHBASK HAGSCHABSCIHBASICH HABSCGIHAGBSCIHBAS
+            <tr *ngFor="let obj of objetivosCompetencia">
+              <th style="text-align:center; vertical-align: middle;" *ngIf="obj.id_tipo_objetivo == 1">Saber</th>
+              <td *ngIf="obj.id_tipo_objetivo == 1">{{obj.desc_objetivo}}
                 <div class="row">
                   <div class="col-sm-1">
-                      <p> <span class="badge badge-secondary">AAC</span></p>
+                      <a href="#" class="badge badge-pill badge-color">AAC</a>
                   </div>
                   <div class="col-sm-1">
-                      <p> <span class="badge badge-secondary">BBC</span></p>
+                      <a href="#" class="badge  badge-pill badge-color">BBC</a>
                   </div>
                 </div> 
               </td>
-              <td>
+              <td *ngIf="obj.id_tipo_objetivo == 1">
                   <select class="form-control">
                       <option>Seleccione</option>
+                      <option *ngFor="let ass of metodosAssessment">{{ass.abreviatura}}</option>
                   </select>
             </td>
-              <td><button type="button" class="btn btn-primary">1</button></td>
-              <td><button type="button" class="btn btn-primary">2</button></td>
-              <td><button type="button" class="btn btn-primary">3</button></td>
-              <td><button type="button" class="btn btn-primary">4</button></td>
-              <td><button type="button" class="btn btn-primary">5</button></td>
-              <td><button type="button" class="btn btn-primary">6</button></td>
-              <td><button type="button" class="btn btn-primary">7</button></td>
-              <td><button type="button" class="btn btn-primary">8</button></td>
-              <td><button type="button" class="btn btn-primary">9</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,1,ass.abreviatura)">1</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,2,ass.abreviatura)">2</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,3,ass.abreviatura)">3</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,4,ass.abreviatura)">4</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,5,ass.abreviatura)">5</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,6,ass.abreviatura)">6</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,7,ass.abreviatura)">7</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,8,ass.abreviatura)">8</button></td>
+              <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="crearEvaluacion(obj,9,ass.abreviatura)">9</button></td>
+            
             </tr>
-            <tr>
-                <td>Principales .....</td>
-                <td>
-                    <select class="form-control">
-                        <option>Seleccione</option>
-                    </select>
-              </td>
-                <td><button type="button" class="btn btn-primary">1</button></td>
-                <td><button type="button" class="btn btn-primary">2</button></td>
-                <td><button type="button" class="btn btn-primary">3</button></td>
-                <td><button type="button" class="btn btn-primary">4</button></td>
-                <td><button type="button" class="btn btn-primary">5</button></td>
-                <td><button type="button" class="btn btn-primary">6</button></td>
-                <td><button type="button" class="btn btn-primary">7</button></td>
-                <td><button type="button" class="btn btn-primary">8</button></td>
-                <td><button type="button" class="btn btn-primary">9</button></td>
-              </tr>
-              <tr>
-                  <td>Principales .....</td>
-                  <td>
-                      <select class="form-control">
-                          <option>Seleccione</option>
-                      </select>
-                </td>
-                  <td><button type="button" class="btn btn-primary">1</button></td>
-                  <td><button type="button" class="btn btn-primary">2</button></td>
-                  <td><button type="button" class="btn btn-primary">3</button></td>
-                  <td><button type="button" class="btn btn-primary">4</button></td>
-                  <td><button type="button" class="btn btn-primary">5</button></td>
-                  <td><button type="button" class="btn btn-primary">6</button></td>
-                  <td><button type="button" class="btn btn-primary">7</button></td>
-                  <td><button type="button" class="btn btn-primary">8</button></td>
-                  <td><button type="button" class="btn btn-primary">9</button></td>
-                </tr>
-            <tr>
-              <th scope="row" rowspan="3">Hacer</th>
-              <td>Principales GSACUYGASIUCGBA HASBCIJGBACHBASK HAGSCHABSCIHBASICH HABSCGIHAGBSCIHBAS</td>
-              <td>
+            <tr *ngFor="let obj of objetivosCompetencia">
+              <th style="text-align:center; vertical-align: middle;" *ngIf="obj.id_tipo_objetivo==2">Hacer</th>
+              <td *ngIf="obj.id_tipo_objetivo==2">{{obj.desc_objetivo}}</td>
+              <td *ngIf="obj.id_tipo_objetivo==2">
                   <select class="form-control">
                       <option>Seleccione</option>
+                      <option *ngFor="let ass of metodosAssessment">{{ass.abreviatura}}</option>
                   </select>
             </td>
-              <td><button type="button" class="btn btn-primary">1</button></td>
-              <td><button type="button" class="btn btn-primary">2</button></td>
-              <td><button type="button" class="btn btn-primary">3</button></td>
-              <td><button type="button" class="btn btn-primary">4</button></td>
-              <td><button type="button" class="btn btn-primary">5</button></td>
-              <td><button type="button" class="btn btn-primary">6</button></td>
-              <td><button type="button" class="btn btn-primary">7</button></td>
-              <td><button type="button" class="btn btn-primary">8</button></td>
-              <td><button type="button" class="btn btn-primary">9</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">1</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">2</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">3</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">4</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">5</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">6</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">7</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">8</button></td>
+              <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary">9</button></td>
+            
             </tr>
-            <tr>
-                <td>Principales .....</td>
-                <td>
-                    <select class="form-control">
-                        <option>Seleccione</option>
-                    </select>
-              </td>
-                <td><button type="button" class="btn btn-primary">1</button></td>
-                <td><button type="button" class="btn btn-primary">2</button></td>
-                <td><button type="button" class="btn btn-primary">3</button></td>
-                <td><button type="button" class="btn btn-primary">4</button></td>
-                <td><button type="button" class="btn btn-primary">5</button></td>
-                <td><button type="button" class="btn btn-primary">6</button></td>
-                <td><button type="button" class="btn btn-primary">7</button></td>
-                <td><button type="button" class="btn btn-primary">8</button></td>
-                <td><button type="button" class="btn btn-primary">9</button></td>
-              </tr>
-              <tr>
-                  <td>Principales .....</td>
-                  <td>
-                      <select class="form-control">
-                          <option>Seleccione</option>
-                      </select>
-                </td>
-                  <td><button type="button" class="btn btn-primary">1</button></td>
-                  <td><button type="button" class="btn btn-primary">2</button></td>
-                  <td><button type="button" class="btn btn-primary">3</button></td>
-                  <td><button type="button" class="btn btn-primary">4</button></td>
-                  <td><button type="button" class="btn btn-primary">5</button></td>
-                  <td><button type="button" class="btn btn-primary">6</button></td>
-                  <td><button type="button" class="btn btn-primary">7</button></td>
-                  <td><button type="button" class="btn btn-primary">8</button></td>
-                  <td><button type="button" class="btn btn-primary">9</button></td>
-                </tr>
+            <tr *ngFor="let obj of objetivosCompetencia" >
+            <th style="text-align:center; vertical-align: middle;" *ngIf="obj.id_tipo_objetivo==3" >Ser</th>
+            <td *ngIf="obj.id_tipo_objetivo==3">{{obj.desc_objetivo}}</td>
+            <td *ngIf="obj.id_tipo_objetivo==3">
+                <select class="form-control" >
+                    <option>Seleccione</option>
+                    <option *ngFor="let ass of metodosAssessment">{{ass.abreviatura}}</option>
+                </select>
+          </td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">1</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">2</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">3</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">4</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">5</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">6</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">7</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">8</button></td>
+            <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary">9</button></td>
+          </tr>
           </tbody>
         </table>
+      </div>
   </div>
