--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,10 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/evaluacion">Ayuda</a>
+        <a class="nav-link" href="">Evaluacion</a>
       </li>
     </ul>
     <form class="form-inline mt-2 mt-md-0">
