Cambios al front

--- a/src/app/components/evaluacion/evaluacion.component.html
+++ b/src/app/components/evaluacion/evaluacion.component.html
@@ -103,4 +103,8 @@
           </tbody>
         </table>
       </div>
+
+      <div *ngFor="let item of objass">
+        <h1>{{item.id_assessment}}</h1>
+      </div>
   </div>
