--- a/src/app/components/autoevaluacion/autoevaluacion.component.html
+++ b/src/app/components/autoevaluacion/autoevaluacion.component.html
@@ -20,6 +20,9 @@
     <div class="alert alert-danger" [hidden]="!error">
       {{error}}
    </div>
+   <div class="alert alert-success" [hidden]="!mensaje">
+    {{mensaje}}
+   </div>
 
   <div class="table-responsive">
     <table class="table table-hover">
