--- a/src/app/components/resultados-estudiante/resultados-estudiante.component.html
+++ b/src/app/components/resultados-estudiante/resultados-estudiante.component.html
@@ -1,3 +1,16 @@
-<p>
-  resultados-estudiante works!
-</p>
+<div class="jumbotron jumbotron-fluid ajustarMargen">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-5">
+        <img src="assets/img/cerebrito.png" class="img-fluid float-right" alt="Responsive image" height="50%" width="50%">
+      </div>
+      <div class="col-sm-7">
+        <br />
+        <br />
+        <br />
+        <h1 class="display-4">Psycho</h1>
+        <p class="lead">Usted se encuentra en el modulo de resultados.</p>
+      </div>
+    </div>
+  </div>
+</div>
