--- a/src/app/components/autoevaluacion/autoevaluacion.component.html
+++ b/src/app/components/autoevaluacion/autoevaluacion.component.html
@@ -16,12 +16,6 @@
 <br/>
 
 <div class="container-fluid">
-
-    <h3>Métodos de assessment</h3>
-    <div *ngFor="let ass of metodosAssessment">
-    <p><strong>{{ass.abreviatura}} :</strong> {{ass.nombre}}. </p>
-    </div>
-
     <div class="alert alert-danger" [hidden]="!error">
       {{error}}
    </div>
@@ -43,17 +37,9 @@
           <tr *ngFor="let obj of objetivosCompetencia">
             <th style="text-align:center; vertical-align: middle;" *ngIf="obj.id_tipo_objetivo == 1">Saber</th>
             <td *ngIf="obj.id_tipo_objetivo == 1" >{{obj.desc_objetivo}}
-              <div class="row">
-                <div class="col-sm-1">
-                    <a href="#" class="badge badge-pill badge-color">AAC</a>
-                </div>
-                <div class="col-sm-1">
-                    <a href="#" class="badge  badge-pill badge-color">BBC</a>
-                </div>
-              </div> 
-            </td>
+          </td>
             <td *ngIf="obj.id_tipo_objetivo == 1" >
-                <select (change)="selectChangeHandler($event)" class="form-control">
+                <select id="selectOne" (change)="selectChangeHandler($event)" class="form-control">
                     <option value="Seleccione">Seleccione</option>
                     <option *ngFor="let ass of metodosAssessment" value="{{ass.abreviatura}}">{{ass.abreviatura}}</option>
                 </select>
@@ -63,16 +49,12 @@
             <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="evaluar(obj,3)">3</button></td>
             <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="evaluar(obj,4)">4</button></td>
             <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="evaluar(obj,5)">5</button></td>
-            <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="evaluar(obj,6)">6</button></td>
-            <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="evaluar(obj,7)">7</button></td>
-            <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="evaluar(obj,8)">8</button></td>
-            <td *ngIf="obj.id_tipo_objetivo == 1"><button type="button" class="btn btn-primary" (click)="evaluar(obj,9)">9</button></td>
           </tr>
           <tr *ngFor="let obj of objetivosCompetencia"> 
             <th style="text-align:center; vertical-align: middle;" *ngIf="obj.id_tipo_objetivo==2">Hacer</th>
             <td *ngIf="obj.id_tipo_objetivo==2">{{obj.desc_objetivo}}</td>
             <td *ngIf="obj.id_tipo_objetivo==2">
-                <select (change)="selectChangeHandler($event)" class="form-control">
+                <select id="selectTwo" (change)="selectChangeHandler($event)" class="form-control">
                     <option value="Seleccione">Seleccione</option>
                     <option *ngFor="let ass of metodosAssessment" value="{{ass.abreviatura}}">{{ass.abreviatura}}</option>
                 </select>
@@ -82,16 +64,12 @@
             <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary" (click)="evaluar(obj,3)">3</button></td>
             <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary" (click)="evaluar(obj,4)">4</button></td>
             <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary" (click)="evaluar(obj,5)">5</button></td>
-            <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary" (click)="evaluar(obj,6)">6</button></td>
-            <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary" (click)="evaluar(obj,7)">7</button></td>
-            <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary" (click)="evaluar(obj,8)">8</button></td>
-            <td *ngIf="obj.id_tipo_objetivo==2"><button type="button" class="btn btn-primary" (click)="evaluar(obj,9)">9</button></td>
           </tr>
           <tr *ngFor="let obj of objetivosCompetencia">
           <th style="text-align:center; vertical-align: middle;" *ngIf="obj.id_tipo_objetivo==3">Ser</th>
           <td *ngIf="obj.id_tipo_objetivo==3">{{obj.desc_objetivo}}</td>
           <td *ngIf="obj.id_tipo_objetivo==3">
-              <select class="form-control" (change)="selectChangeHandler($event)">
+              <select id="selectThree" class="form-control" (change)="selectChangeHandler($event)">
                   <option value="Seleccione">Seleccione</option>
                   <option *ngFor="let ass of metodosAssessment" value="{{ass.abreviatura}}">{{ass.abreviatura}}</option>
               </select>
@@ -101,10 +79,6 @@
           <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary" (click)="evaluar(obj,3)">3</button></td>
           <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary" (click)="evaluar(obj,4)">4</button></td>
           <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary" (click)="evaluar(obj,5)">5</button></td>
-          <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary" (click)="evaluar(obj,6)">6</button></td>
-          <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary" (click)="evaluar(obj,7)">7</button></td>
-          <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary" (click)="evaluar(obj,8)">8</button></td>
-          <td *ngIf="obj.id_tipo_objetivo==3"><button type="button" class="btn btn-primary" (click)="evaluar(obj,9)">9</button></td>
         </tr>
         </tbody>
       </table>
