--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,28 @@
-<p>
-  login works!
-</p>
+<div class="container-fluid fondo">
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 offset=md-1">
+      <div class="row">
+        <div class="col-md-5 register-left">
+          <img src="assets/img/cerebrito.png" class="img-fluid" alt="Responsive image" height="50%" width="50%">
+          <h3 class="display-4">Psycho</h3>
+          <p class="lead">Sistema de evaluación y assessment de la Especialización en Psiquiatría de la Universidad Icesi</p>
+          <button type="button" class="btn btn-primary">Acerca de</button>
+        </div>
+        <div class="col-md-7 register-right">
+              <h2 class="display-4">Iniciar sesión</h2>
+              <div class="register-form">
+                <div class="form-group">
+                  <input type="email" class="form-control radio" placeholder="Correo electrónico"/>
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control radio" placeholder="Contraseña"/>
+                </div>
+                  <button type="button" class="btn btn-primary">Ingresar</button>               
+              </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
