--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid fondo">
 <div class="container">
   <div class="row">
-    <div class="col-md-10 offset=md-1">
+    <div class="col-md-10 offset=md-1 contenedor">
       <div class="row">
         <div class="col-md-5 register-left">
           <img src="assets/img/cerebrito.png" class="img-fluid" alt="Responsive image" height="50%" width="50%">
@@ -10,6 +10,7 @@
           <button type="button" class="btn btn-primary">Acerca de</button>
         </div>
         <div class="col-md-7 register-right">
+              <br/> 
               <h2 class="display-4">Iniciar sesión</h2>
               <div class="register-form">
                 <div class="form-group">
