--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<app-navbar></app-navbar>
-<ng-snotify></ng-snotify>
-<div class="container-fluid">
+<app-login *ngIf="logged==null"></app-login>
+
+<app-navbar *ngIf="logged !=null"></app-navbar>
+<ng-snotify *ngIf="logged !=null"></ng-snotify>
+<div class="container-fluid" *ngIf="logged !=null">
     <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
+<app-footer *ngIf="logged !=null"></app-footer>
+
